--- a/src/styles/globalstyle.scss
+++ b/src/styles/globalstyle.scss
@@ -42,15 +42,23 @@ body {
   background-color: hsla(225, 100%, 94%, 0.801);
 }
 
+.main-parent {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+}
+
 .container {
-  padding: 40px 20px 20px 20px;
+  padding: 20px 20px 20px 20px;
   width: 99%;
   margin: auto;
   flex-wrap: wrap;
   display: flex;
   justify-content: space-between;
-  justify-content: center;
+  // justify-content: center;
   flex-wrap: wrap;
+  flex: 1;
+  overflow: auto;
 }
 
 .card_item {
@@ -63,7 +71,7 @@ body {
   .card_item:hover {
     transform: scale(1.02);
     transition: transform 0.3s;
-    cursor: pointer;
+    // cursor: pointer;
   }
 }
 
@@ -132,6 +140,27 @@ body {
       color: #7b8ca0;
       display: flex;
       flex-direction: column;
+
+      .dead {
+        background: rgb(214, 61, 46);
+        border-radius: 50%;
+        height: 7px;
+        margin: auto;
+        width: 7px;
+        display: inline-block;
+        padding: 0 !important;
+        margin: 2px 2px 2px 0px !important;
+      }
+      .alive {
+        background: rgb(85, 204, 68);
+        border-radius: 50%;
+        height: 7px;
+        margin: auto;
+        width: 7px;
+        display: inline-block;
+        padding: 0 !important;
+        margin: 2px 2px 2px 0px !important;
+      }
     }
   }
 }
@@ -166,6 +195,19 @@ body {
   font-weight: 600;
   cursor: pointer;
   box-shadow: 0 10px 10px hsl(225, 100%, 94%);
+}
+
+.header {
+  position: sticky;
+  top: 0;
+  background: hsl(245, 44%, 65%);
+  z-index: 999;
+  padding: 10px;
+  text-align: center;
+  font-size: 40px;
+  color: #fff;
+  font-weight: 600;
+  box-shadow: 5px 5px 10px 2px rgba(95, 95, 95, 0.24);
 }
 
 @media screen and (max-width: 1024px) {
