--- a/src/styles/globalstyle.scss
+++ b/src/styles/globalstyle.scss
@@ -46,16 +46,154 @@ body {
   position: relative;
   display: flex;
   flex-direction: column;
-}
+  height: 100%;
 
+  .Popup-parent {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: 999;
+    background-color: rgb(0 0 0 / 62%);
+    animation-name: animate;
+    animation-duration: 0.6s;
+    .pop-wrapper {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      width: auto;
+      max-width: 70%;
+      background-color: #ffffff;
+      transform: translate(-50%, -50%);
+      border-radius: 10px;
+      padding: 10px;
+      height: 80%;
+      overflow: auto;
+      .close-icon {
+        position: absolute;
+        right: 4px;
+        cursor: pointer;
+        top: 3px;
+        img {
+          width: 26px;
+        }
+      }
+      .pop_item {
+        padding: 15px 30px;
+        height: 100%;
+        .card_inner {
+          display: flex;
+          width: 100%;
+          justify-content: center;
+          align-items: center;
+          flex-direction: column;
+          gap: 11px;
+          position: relative;
+          height: 100%;
+          .profile-section {
+            position: sticky;
+            width: 100%;
+            text-align: center;
+            top: 15px;
+            background-color: #ffffff;
+          }
+          .userName {
+            color: #203150;
+            font-weight: 600;
+            font-size: 20px;
+          }
+          .userUrl {
+            font-size: 12px;
+            font-weight: 100;
+            margin: 5px 0 10px;
+            word-wrap: break-word;
+            color: #888b9e;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+          }
+          img {
+            width: 120px;
+            height: 120px;
+            border-radius: 50%;
+            align-items: center;
+            transition: transform 0.2s;
+          }
+          .detail-box {
+            // display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 10px;
+            overflow: auto;
+            .gitDetail {
+              font-size: 13px;
+              line-height: 24px;
+              color: #7b8ca0;
+              display: flex;
+              flex-direction: column;
+              text-align: center;
+              padding: 0px 13px;
+              .dead {
+                background: rgb(214, 61, 46);
+                border-radius: 50%;
+                height: 7px;
+                margin: auto;
+                width: 7px;
+                display: inline-block;
+                padding: 0 !important;
+                margin: 2px 2px 2px 0px !important;
+              }
+              .alive {
+                background: rgb(85, 204, 68);
+                border-radius: 50%;
+                height: 7px;
+                margin: auto;
+                width: 7px;
+                display: inline-block;
+                padding: 0 !important;
+                margin: 2px 2px 2px 0px !important;
+              }
+
+              .species {
+                white-space: nowrap;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                // width: 68px;
+                padding: 0px 10px;
+              }
+              span {
+                margin: 2px;
+                padding: 2px 10px;
+                background-color: #f0ebfa;
+                border-radius: 10px;
+                font-size: 14px;
+                font-weight: 600;
+                color: #788697;
+              }
+            }
+          }
+          .seeMore {
+            margin: 10px auto;
+            width: 100px;
+            height: 35px;
+            background: hsl(245, 44%, 65%);
+            color: #fff;
+            border: none;
+            border-radius: 10px;
+            font-weight: 600;
+            cursor: pointer;
+            box-shadow: 0 10px 10px hsl(225, 100%, 94%);
+          }
+        }
+      }
+    }
+  }
+}
 .container {
-  padding: 20px 20px 20px 20px;
-  width: 99%;
+  padding: 20px 20px 10px 20px;
+  width: 100%;
   margin: auto;
   flex-wrap: wrap;
   display: flex;
   justify-content: space-between;
-  // justify-content: center;
   flex-wrap: wrap;
   flex: 1;
   overflow: auto;
@@ -65,17 +203,11 @@ body {
   padding: 15px 30px;
   width: 24%;
   text-align: center;
-}
-
-.container {
-  .card_item:hover {
+  &:hover {
     transform: scale(1.02);
     transition: transform 0.3s;
     // cursor: pointer;
   }
-}
-
-.container {
   .card_inner {
     background: rgba(253, 253, 253, 0.808);
     border-radius: 10px;
@@ -90,23 +222,6 @@ body {
     align-items: center;
     flex-direction: column;
     gap: 11px;
-  }
-}
-
-.container {
-  .card_item {
-    img {
-      width: 120px;
-      height: 120px;
-      border-radius: 50%;
-      align-items: center;
-      transition: transform 0.2s;
-    }
-  }
-}
-
-.container {
-  .card_item {
     .userName {
       color: #203150;
       font-weight: 600;
@@ -114,12 +229,8 @@ body {
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
+      max-width: 94%;
     }
-  }
-}
-
-.container {
-  .card_item {
     .userUrl {
       font-size: 12px;
       font-weight: 100;
@@ -129,72 +240,87 @@ body {
       text-overflow: ellipsis;
       white-space: nowrap;
     }
-  }
-}
-
-.container {
-  .card_item {
-    .gitDetail {
-      font-size: 13px;
-      line-height: 24px;
-      color: #7b8ca0;
+    img {
+      width: 120px;
+      height: 120px;
+      border-radius: 50%;
+      align-items: center;
+      transition: transform 0.2s;
+    }
+    .detail-box {
       display: flex;
-      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      gap: 6px;
+      .gitDetail {
+        font-size: 13px;
+        line-height: 24px;
+        color: #7b8ca0;
+        display: flex;
+        flex-direction: column;
 
-      .dead {
-        background: rgb(214, 61, 46);
-        border-radius: 50%;
-        height: 7px;
-        margin: auto;
-        width: 7px;
-        display: inline-block;
-        padding: 0 !important;
-        margin: 2px 2px 2px 0px !important;
+        .dead {
+          background: rgb(214, 61, 46);
+          border-radius: 50%;
+          height: 7px;
+          margin: auto;
+          width: 7px;
+          display: inline-block;
+          padding: 0 !important;
+          margin: 2px 2px 2px 0px !important;
+        }
+        .alive {
+          background: rgb(85, 204, 68);
+          border-radius: 50%;
+          height: 7px;
+          margin: auto;
+          width: 7px;
+          display: inline-block;
+          padding: 0 !important;
+          margin: 2px 2px 2px 0px !important;
+        }
+
+        .species {
+          white-space: nowrap;
+          overflow: hidden;
+          text-overflow: ellipsis;
+          width: 68px;
+          padding: 0px 10px;
+        }
+        span {
+          margin: 2px;
+          padding: 2px 10px;
+          background-color: #f0ebfa;
+          border-radius: 10px;
+          font-size: 14px;
+          font-weight: 600;
+          color: #788697;
+        }
       }
-      .alive {
-        background: rgb(85, 204, 68);
-        border-radius: 50%;
-        height: 7px;
-        margin: auto;
-        width: 7px;
-        display: inline-block;
-        padding: 0 !important;
-        margin: 2px 2px 2px 0px !important;
-      }
+    }
+    .seeMore {
+      margin: 10px auto;
+      width: 100px;
+      height: 35px;
+      background: hsl(245, 44%, 65%);
+      color: #fff;
+      border: none;
+      border-radius: 10px;
+      font-weight: 600;
+      cursor: pointer;
+      box-shadow: 0 10px 10px hsl(225, 100%, 94%);
     }
   }
 }
 
-.detail-box {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 6px;
-}
-
-.detail-box {
-  span {
-    margin: 2px;
-    padding: 2px 10px;
-    background-color: #f0ebfa;
-    border-radius: 10px;
-    font-size: 14px;
-    font-weight: 600;
-    color: #788697;
-  }
-}
-
-.seeMore {
-  margin: 10px auto;
-  width: 100px;
-  height: 35px;
-  background: hsl(245, 44%, 65%);
-  color: #fff;
-  border: none;
-  border-radius: 10px;
+.loader {
+  text-align: center;
   font-weight: 600;
-  cursor: pointer;
-  box-shadow: 0 10px 10px hsl(225, 100%, 94%);
+  padding: 3px;
+  img {
+    width: 45px;
+    height: 34px;
+  }
 }
 
 .header {
@@ -208,6 +334,24 @@ body {
   color: #fff;
   font-weight: 600;
   box-shadow: 5px 5px 10px 2px rgba(95, 95, 95, 0.24);
+}
+
+@keyframes animate {
+  0% {
+    filter: blur(8px);
+  }
+  25% {
+    filter: blur(6px);
+  }
+  50% {
+    filter: blur(4px);
+  }
+  75% {
+    filter: blur(2px);
+  }
+  100% {
+    filter: blur(0px);
+  }
 }
 
 @media screen and (max-width: 1024px) {
